--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.17.2",
     "hbs": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.7.5",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
     "snowflake-sdk": "^1.6.8"
